fixes table content alignment
fixes the user column overflow on the bottom

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -160,11 +160,14 @@ table {
   margin-top: 0px;
   width: 100%; 
   height: 100px; 
+  vertical-align: center;
 }
 
 th, td {
   text-align: center;
   font-family: 'JetBrains Mono', monospace;
+  font-size: 13px;
+  vertical-align: middle;
 }
 
 .new-form {
@@ -237,14 +240,14 @@ th, td {
 }
 
 .styleset-user, .theme-user {
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
 }
 
 .styleset-user img, .theme-user img {
   border-radius: 50%;
-  height: 40px;
+  height: 35px;
 }
 
 hr {
